--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-8 col-10 text-center">
-            <span>How it Start, Continues, and Never End</span>
+            <span>How it Start, Continue, and Never End</span>
             <h2>God's Story</h2>
             <p>We, here, believe in fate. Believe that everything's happen for some reasons. Believe that this is not the end of our journey, however, this is the best part of our promises.</p>
           </div>
