--- a/index.html
+++ b/index.html
@@ -229,6 +229,17 @@
       </div>
     </section>
 
+    <section id="gallery" class="gallery">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Our Memories</span>
+            <h2>Gallery</h2>
+            <p>We, here, believe in fate</p>
+          </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script>
       simplyCountdown(".simply-countdown", {
